# ShieldVote

./: .gitignore  README.md
anchor-version/: Anchor.toml  Cargo.toml
anchor-version/programs/anchor-version/: Cargo.toml
anchor-version/programs/anchor-version/src/: lib.rs
anchor-version/tests/: anchor-version.ts
cli-version/: Cargo.toml
cli-version/src/: main.rs
