[package]
name = "shieldvote-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-client = "0.29.0"
anchor-lang = "0.29.0"
solana-sdk = "1.18"
clap = { version = "4", features = ["derive"] }
sha2 = "0.10"
rand = "0.8"
anyhow = "1.0"
hex = "0.4"

shieldvote_anchor = { path = "../anchor-version/programs/anchor-version" }